samples/_failures_safe/1761508952_0a271a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_db6736bd.c: In function ‘main’:
./samples/SAFE/__tmp_db6736bd.c:158:12: error: missing terminating " character
  158 |     printf("Enter command sequence (S=start, P=pause, R=resume, E=error, F=finish
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_db6736bd.c:158:5: error: expected expression at end of input
  158 |     printf("Enter command sequence (S=start, P=pause, R=resume, E=error, F=finish
      |     ^~~~~~
./samples/SAFE/__tmp_db6736bd.c:158:5: error: expected declaration or statement at end of input
